meet_base: adding metrics